--- a/Kiba/View/Auth/KBAAuthController.xib
+++ b/Kiba/View/Auth/KBAAuthController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBAAuthController">
             <connections>
+                <outlet property="advantagesButton" destination="kHe-cw-ESG" id="iq0-ju-XSq"/>
                 <outlet property="authCodeField" destination="ggk-1H-ANl" id="k93-SF-XeT"/>
                 <outlet property="comicView" destination="Dru-38-HID" id="id4-Xl-kzv"/>
                 <outlet property="scrollView" destination="m0c-7M-W3j" id="sI0-Gk-JbV"/>
